--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
 		"vite": "^5.0.3"
 	},
 	"dependencies": {
+		"bcrypt": "^5.1.1",
 		"drizzle-orm": "^0.33.0",
+		"jose": "^5.9.6",
 		"postgres": "^3.4.4"
 	}
 }
