--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"vite": "^5.0.3"
 	},
 	"dependencies": {
+		"@sveltejs/adapter-node": "^5.2.9",
 		"bcrypt": "^5.1.1",
 		"drizzle-orm": "^0.33.0",
 		"jose": "^5.9.6",
