On fire right now

--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
 	},
 	"dependencies": {
 		"@sveltejs/adapter-node": "^5.2.9",
+		"@zerodevx/svelte-toast": "^0.9.6",
 		"bcrypt": "^5.1.1",
 		"drizzle-orm": "^0.33.0",
 		"jose": "^5.9.6",
-		"postgres": "^3.4.4"
+		"pdfkit": "^0.15.1",
+		"postgres": "^3.4.4",
+		"qrcode": "^1.5.4"
 	}
 }
